[package]
name = "pui-arena"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

pui = ['pui-vec/pui', 'pui-core']
slot_map = []
slab = []

[dependencies]
pui-core = { path = '../core', default-features = false, optional = true }
pui-vec = { path = '../vec' }