[package]
name = "pui-cell"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pui-core = { path = '../core', default-features = false }
typsy = { git = 'https://github.com/RustyYato/typsy', branch = 'main', default-features = false }