[package]
name = "pui"
version = "0.5.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

std = []

[dependencies]
pui-core = { path = '../core' }
pui-vec = { path = '../vec', features = ['pui'] }
pui-arena = { path = '../arena', features = ['pui', 'slotmap', 'slab', 'scoped'] }
pui-cell = { path = '../cell' }