[package]
name = "pui"
version = "0.5.1"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"
keywords = ["identifier", "unique"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/RustyYato/pui"
description = "Process unique identifiers, and abstractions built atop them"

[package.metadata.docs.rs]
features = ['std', 'parking_lot', 'once_cell']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['std']
std = ['pui-core/std', 'alloc']
alloc = ['pui-arena', 'pui-vec']

[dependencies]
pui-cell = { path = '../cell', version = '0.5.1' }

[dependencies.pui-core]
path = '../core'
version = '0.5.2'
default-features = false

[dependencies.pui-vec]
path = '../vec'
version = '0.5.1'
features = ['pui']
default-features = false
optional = true

[dependencies.pui-arena]
path = '../arena'
version = '0.5.1'
features = ['pui', 'slotmap', 'slab', 'scoped']
default-features = false
optional = true