[package]
name = "pui-vec"
version = "0.5.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"
keywords = ["identifier", "unique", "vec"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/RustyYato/pui"
description = "An append only vector, with guaranteed elided bounds checks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['pui']

pui = ['pui-core']

[dependencies]
pui-core = { path = '../core', version = '0.5.1', default-features = false, optional = true }